[gd_scene load_steps=11 format=2]

[ext_resource path="res://Scripts/MusicPlayer.gd" type="Script" id=1]
[ext_resource path="res://Audio/Music/Lvl1/mus_lvl1_Chords.wav" type="AudioStream" id=2]
[ext_resource path="res://Audio/Music/Lvl1/mus_lvl1_Melody1.wav" type="AudioStream" id=3]
[ext_resource path="res://Audio/Music/Lvl1/mus_lvl1_Pad1.wav" type="AudioStream" id=4]
[ext_resource path="res://Audio/Music/Lvl1/mus_lvl1_Pad2.wav" type="AudioStream" id=5]
[ext_resource path="res://Audio/Music/Lvl1/mus_lvl1_Bass.wav" type="AudioStream" id=6]
[ext_resource path="res://Audio/Music/Lvl1/mus_lvl1_Drums Light.wav" type="AudioStream" id=7]
[ext_resource path="res://Audio/Music/Lvl1/mus_lvl1_Melody2.wav" type="AudioStream" id=8]
[ext_resource path="res://Audio/Music/Lvl1/mus_lvl1_Drums Heavy.wav" type="AudioStream" id=9]
[ext_resource path="res://Audio/FX/Blip_Select4.wav" type="AudioStream" id=10]

[node name="MusicPlayer" type="Node2D"]
script = ExtResource( 1 )
layer1 = ExtResource( 2 )
layer2 = ExtResource( 3 )
layer3 = ExtResource( 4 )
layer4 = ExtResource( 5 )
layer5 = ExtResource( 6 )
layer6 = ExtResource( 7 )
layer7 = ExtResource( 8 )
layer8 = ExtResource( 9 )
tempo = 130
bars = 64

[node name="Tween" type="Tween" parent="."]

[node name="bar_tone" type="AudioStreamPlayer" parent="."]

[node name="beat_tone" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
volume_db = -10.0
mix_target = 2

[node name="kill_beat" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="kill_bar" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[connection signal="timeout" from="kill_beat" to="." method="_reenableBeat"]
[connection signal="timeout" from="kill_bar" to="." method="_reenableBar"]
